# GIFTools

./: GIFTools.sln  README.md
GIF_parse/: GIF_parse.cpp  GIF_parse.vcxproj  GIF_parse.vcxproj.filters
change_gif_durations/: CMakeLists.txt  GIF_parse.cpp  GIF_parse.h  change_gif_durations.cpp  change_gif_durations.vcxproj  change_gif_durations.vcxproj.filters
remove_half_the_frames/: CMakeLists.txt  WinError.cpp  remove_half_the_frames.cpp  remove_half_the_frames.vcxproj  remove_half_the_frames.vcxproj.filters
renumber_files/: renumber_files.vcxproj  renumber_files.vcxproj.filters
renumber_frames/: CMakeLists.txt  CrossPlatformDefs.h  renumber_frames.cpp  renumber_frames.vcxproj  renumber_frames.vcxproj.filters
